# sokoban

./: .gitignore
sokoban-cpp/: AStar.cpp  AStar.h  AssignmentAlgorithms.cpp  AssignmentAlgorithms.h  BoundAlgorithm.cpp  BoundAlgorithm.h  BoundAlgorithm2.cpp  CMakeLists.txt  DeadlockDetection.cpp  DeadlockDetection.h  Execution.cpp  Execution.cpp~  Execution.h  Makefile  Makefile~  Map.cpp  Map.cpp~  Map.h  Metrics.cpp  Metrics.h  Move.cpp  Move.h  Node.cpp  Node.h  PlayerPath.cpp  PlayerPath.h  PlayerPath_old.cpp  PlayerPath_old.h  SokobanSolver  TranspositionTable.cpp  TranspositionTable.h  main.cpp  main.cpp~  start.sh
sokoban-cpp/hungarian/: testMain.cpp
sokoban-cpp/level/: level2.txt  level3.txt  level5.txt  level7.txt
sokoban-cpp/perceptron/: Perceptron.cpp  Perceptron.cpp~  Perceptron.h  model.tflite
sokoban-cpp/perceptron/models/: _wrong_model_not_center.tflite  model-center.tflite  model_not_center.tflite
sokoban-levels/: Generator  Heuristik.cpp  Heuristik.h  Makefile  Makefile~  RunningMap.cpp  RunningMap.h  TrainingData.cpp  TrainingData.cpp~  TrainingData.h  TrainingDataGenerator  graph-perceptron.csv  graph-random-shuffle.csv  index.js  main.cpp  package-lock.json  package.json  plot-perceptron.plt  plot-random-shuffle.plt
sokoban-levels/archive/: result.tgz  result1.tgz  result3.tgz
sokoban-python/: AssignmentAlgorithms.py  BoundAlgorithms.py  DeadlockDetection.py  Execution.py  Map.py  Metrics.py  Pathfind_Algorithms.py  Pathfind_Algorithms2.py  PlayerPath.py  Solver.py  StateTree.py  TestingStuff.py  TranspositionTable.py
(+11555 files in other folders)
